# brostorn

./: .env  .env.example  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/api/: main.py
apps/indexer/: main.py
apps/mcp_server/: main.py
commands/: debug.md  refactor.md
contexts/: README.md  debug-auth.md  debug-calendar.md  debug-state-management.md  debug-ui-rendering.md
docs/: ARCHITECTURE.md  MCP_SETUP.md  MULTI_PROJECT_MEMORY.md
docs/11-debugging/: mcp-registration-uses-system-python.md
hooks/: README.md  __init__.py  session_end.py  session_start.py
knowledge/obsidian-vault/: README.md
migrations/: env.py
migrations/versions/: 001_init_memory_system.py
projects/balfurd-backend/: project.config.json
projects/gym-trainer/: project.config.json
rules/: context-loading-rules.md  debugging-rules.md  documentation-rules.md
schemas/: README.md  context-pack.schema.json  context-template.schema.json  debug-note.schema.json  distilled-context.schema.json  project.config.schema.json  session-summary.schema.json
scripts/: bootstrap.sh  register_claude_mcp.sh  register_codex_mcp.sh
system/: AGENT_GUIDE.md
system/00-index/: system-index.md
system/01-global-patterns/: debugging-patterns.md  rontend-patterns.md
tests/: conftest.py  test_chunker.py  test_context_pack.py  test_context_packs.py  test_debug_note.py  test_global_vs_project_scope.py  test_markdown_parser.py  test_note_writer.py  test_project_config.py  test_session_summary.py  test_v15_contracts.py
(+104 files in other folders)
